Everything deploys, but boy is it slow

--- a/docker/.env-non-dev
+++ b/docker/.env-non-dev
@@ -18,17 +18,22 @@ COMPOSE_PROJECT_NAME=superset
 
 # database configurations (do not modify)
 DATABASE_DB=superset
-DATABASE_HOST=db
-DATABASE_PASSWORD=superset
-DATABASE_USER=superset
+# DATABASE_HOST=db
+# DATABASE_PASSWORD=superset
+# DATABASE_USER=superset
+DATABASE_HOST=eisuperset01.postgres.database.azure.com
+DATABASE_PASSWORD=UsUXf6ok1UBhNqoCpY2LcQ
+DATABASE_USER=privatevulture2
 
 # database engine specific environment variables
 # change the below if you prefers another database engine
 DATABASE_PORT=5432
 DATABASE_DIALECT=postgresql
 POSTGRES_DB=superset
-POSTGRES_USER=superset
-POSTGRES_PASSWORD=superset
+# POSTGRES_USER=superset
+# POSTGRES_PASSWORD=superset
+POSTGRES_USER=privatevulture2
+POSTGRES_PASSWORD=UsUXf6ok1UBhNqoCpY2LcQ
 #MYSQL_DATABASE=superset
 #MYSQL_USER=superset
 #MYSQL_PASSWORD=superset
@@ -36,7 +41,9 @@ POSTGRES_PASSWORD=superset
 
 # Add the mapped in /app/pythonpath_docker which allows devs to override stuff
 PYTHONPATH=/app/pythonpath:/app/docker/pythonpath_dev
-REDIS_HOST=redis
+# REDIS_HOST=redis
+REDIS_HOST=eisuperset01.redis.cache.windows.net
+REDIS_PASSWORD=yrLnjF1NMz8rvDhvtgn6JJg29VZaQQ58zAzCaDpi4b8=
 REDIS_PORT=6379
 
 FLASK_ENV=production
@@ -44,3 +51,6 @@ SUPERSET_ENV=production
 SUPERSET_LOAD_EXAMPLES=yes
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
+
+# Please update this!
+SECRET_KEY=NotVerySecret_2022
