--- a/docker-compose-azure.yml
+++ b/docker-compose-azure.yml
@@ -1,28 +1,16 @@
-#
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
+# Licensed to the Apache Software Foundation (ASF) 
 #    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-x-superset-image: &superset-image apache/superset:${TAG:-latest-dev}
+
+x-superset-image: &superset-image apache/superset:latest
 # x-superset-depends-on: &superset-depends-on
   # - db
   # - redis
 x-superset-volumes: &superset-volumes
   # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
-  - ./docker:/app/docker
   - superset_home:/app/superset_home
-  - superset_config.py:/etc/superset/superset_config.py
+  # superset loads superset_config.py to /etc/superset
+  - superset:/etc/superset
+  - docker:/app/docker
 
 version: "3.7"
 services:
@@ -81,13 +69,15 @@ services:
     # depends_on: *superset-depends-on
     user: "root"
     volumes: *superset-volumes
-
+ 
 volumes:
   superset_home:
     external: false
-  db_home:
+  # db_home:
+  #   external: false
+  # redis:
+  #   external: false
+  superset:
     external: false
-  redis:
-    external: false
-  superset_config.py:
+  docker:
     external: false
