--- a/docker/.env-non-dev
+++ b/docker/.env-non-dev
@@ -22,7 +22,7 @@ DATABASE_DB=superset
 # DATABASE_PASSWORD=superset
 # DATABASE_USER=superset
 DATABASE_HOST=eisuperset01.postgres.database.azure.com
-DATABASE_PASSWORD=UsUXf6ok1UBhNqoCpY2LcQ
+DATABASE_PASSWORD=
 DATABASE_USER=privatevulture2
 
 # database engine specific environment variables
@@ -33,7 +33,7 @@ POSTGRES_DB=superset
 # POSTGRES_USER=superset
 # POSTGRES_PASSWORD=superset
 POSTGRES_USER=privatevulture2
-POSTGRES_PASSWORD=UsUXf6ok1UBhNqoCpY2LcQ
+POSTGRES_PASSWORD=
 #MYSQL_DATABASE=superset
 #MYSQL_USER=superset
 #MYSQL_PASSWORD=superset
@@ -43,7 +43,7 @@ POSTGRES_PASSWORD=UsUXf6ok1UBhNqoCpY2LcQ
 PYTHONPATH=/app/pythonpath:/app/docker/pythonpath_dev
 # REDIS_HOST=redis
 REDIS_HOST=eisuperset01.redis.cache.windows.net
-REDIS_PASSWORD=yrLnjF1NMz8rvDhvtgn6JJg29VZaQQ58zAzCaDpi4b8=
+REDIS_PASSWORD=
 REDIS_PORT=6379
 
 FLASK_ENV=production
